--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     </ul>
 </nav>
 <body>
+    
     <main>
+        <img class='logo' src='assets/MountainClipArt.png'>
         <h1>Web Developer, Web-design</h1>
         <h2>High-Quality, Custom Websites</h2>
     </main>                                                                               
