added footer/contact page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a class='navLI' href='#'><li class='navLI'>Home</li></a>
         <a class='navLI' href='#aboutme'><li class='navLI'>About</li></a>
         <a class='navLI' href='#projects'><li class='navLI'>Projects</li></a>
-        <a class='navLI' href='#'><li class='navLI'>Contact</li></a>
+        <a class='navLI' href='#contact'><li class='navLI'>Contact</li></a>
     </ul>
 </nav>
 <body>
@@ -61,5 +61,10 @@
             <p class='projectText'> This is a little game like cookie clicker that I made to learn how to use some features in javascript.</p>
         </div>
     </div>
+    <div id='contact' class="contactPage">
+        <h3 class='contactTitle'>Lets get in touch!</h3>
+        <h4 class='contactInfo'>The fastest way to reach me is at <span class='contactEmail'>dylanhkoss@gmail.com</span></h4>
+    </div>
 </body>
+<footer>©Copyright 2021, DylanKoss Portfolio Site</footer>
 </html>
