made email clickable

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     </div>
     <div id='contact' class="contactPage">
         <h3 class='contactTitle'>Lets get in touch!</h3>
-        <h4 class='contactInfo'>The fastest way to reach me is at <span class='contactEmail'>dylanhkoss@gmail.com</span></h4>
+        <h4 class='contactInfo'>The fastest way to reach me is at <a href='mailto: dylanhkoss@gmail.com' class='contactEmailLink'><span class='contactEmail'>dylanhkoss@gmail.com</span></a></h4>
     </div>
 </body>
-<footer>©Copyright 2021, DylanKoss Portfolio Site</footer>
+<footer>©Copyright 2021, DylanKoss Portfolio Site.</footer>
 </html>
