--- a/index.html
+++ b/index.html
@@ -66,5 +66,5 @@
         <h4 class='contactInfo'>The fastest way to reach me is at <a href='mailto: dylanhkoss@gmail.com' class='contactEmailLink'><span class='contactEmail'>dylanhkoss@gmail.com</span></a></h4>
     </div>
 </body>
-<footer>©Copyright 2021, DylanKoss Portfolio Site.</footer>
+<footer>Copyright © 2021, DylanKoss Portfolio Site.</footer>
 </html>
